# PCB-Server

./: .editorconfig  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  Makefile  README.md  docker-compose.yml  work.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 142a7e77eb3b_initial_domain_models.py  8d4b5878d7a9_add_hashed_password_to_users.py  b347c3fda583_add_device_uid_seq.py  b7c4b476c821_add_telemetry_diagnostics.py  c9e1f2a4d6b8_add_device_upload_interval.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: context.py  logging.py  settings.py
backend/app/database/: session.py
backend/app/models/: __init__.py  alert.py  base.py  customer.py  device.py  telemetry.py  user.py
backend/app/repositories/: alert.py  base.py  customer.py  device.py  telemetry.py
backend/app/schemas/: alert.py  common.py  customer.py  dashboard.py  device.py  telemetry.py  user.py
backend/app/services/: alert.py  customer.py  device.py  telemetry.py
backend/scripts/: create_admin.py  golden_path.py  seed_devices.py  test_auth_rejection.py
backend/tests/: conftest.py
docs/: api.md  (+10 more)
simulator/: .gitignore  README.md  main.py  pyproject.toml  telemetry_client.py
simulator/config/: config_10.yaml  config_100.yaml  config_500.yaml  load-test.yaml
simulator/devices/: fleet.py  models.py  store_and_forward.py  virtual_device.py
simulator/tests/: test_fleet.py  test_store_and_forward.py  test_telemetry_client.py  test_virtual_device.py
(+48 files in other folders)
