[project]
name = "simulator"
version = "0.1.0"
description = "Virtual Device Simulator for IoT Device Management Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pyyaml>=6.0.1",
    "structlog>=24.1.0",
    "pydantic>=2.7.0"
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["devices", "profiles", "scenarios", "payloads"]

[tool.pytest.ini_options]
pythonpath = ["."]
